# AdventOfCode2015

./: .gitignore  Cargo.toml
input_data/: day06_simple.txt
