[package]
name = "advent-of-code-2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# advent-of-code-helpers = { path = "../advent-of-code-helpers" }
advent-of-code-helpers = { git = "https://github.com/Finomnis/advent-of-code-helpers.git", rev = "edbe56aa00d161f33fec215c3b8def76aee36259" }
md5 = "0.7"
